k8/app-clusterip.yaml
# Node port for testing this now.
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: api
