k8/app-service.yaml
# Node port for testing this now.

apiVersion: v1
kind: Service
metadata:
  name: api-node-port
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31515
  selector:
    component: api
